--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
+    "sweetalert2": "^10.12.4",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0"
   },
